force-app/main/default/objects/Payment_Plan_Master__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Created for Nexus migration, To capture Description from NKL system</description>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>