force-app/main/default/objects/Payment_Plan_Master__c/fields/External_SF_ID__c.field-meta.xml
<CustomField>
    <fullName>External_SF_ID__c</fullName>
    <description>Created for Nexus migration, To capture NKL SF ID</description>
    <label>External SF ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>