force-app/main/default/objects/Payment_Plan_Master__c/fields/isDefault__c.field-meta.xml
<CustomField>
    <fullName>isDefault__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Default</label>
    <type>Checkbox</type>
</CustomField>