force-app/main/default/objects/Payment_Plan_Master__c/fields/Plot_Inventory__c.field-meta.xml
<CustomField>
    <fullName>Plot_Inventory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Plot Inventory</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Inventory__c.RecordType.Name</field>
            <operation>equals</operation>
            <value>Plot(Land)</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Inventory__c</referenceTo>
    <relationshipName>Payment_Plan_Masters_Plot_Inv</relationshipName>
    <type>Lookup</type>
</CustomField>