force-app/main/default/objects/Payment_Plan_Master__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipName>Payment_Plan_Masters</relationshipName>
    <type>Lookup</type>
</CustomField>