force-app/main/default/objects/Payment_Plan_Master__c/fields/Property__c.field-meta.xml
<CustomField>
    <fullName>Property__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Inventory</label>
    <referenceTo>Inventory__c</referenceTo>
    <relationshipLabel>Master Payment Plans (Inventory)</relationshipLabel>
    <relationshipName>Payment_Plan_Masters</relationshipName>
    <type>Lookup</type>
</CustomField>