force-app/main/default/objects/Payment_Plan_Master__c/fields/Unit__c.field-meta.xml
<CustomField>
    <fullName>Unit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Unit</label>
    <referenceTo>Unit__c</referenceTo>
    <relationshipLabel>Master Payment Plans</relationshipLabel>
    <relationshipName>Master_Payment_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>